# app_sender/internal/entity/api/goods.go
@@ -1,0 +1,6 @@
+package api
+
+type GoodsReq struct {
+	Name        string `json:"name" db:"name" binding:"required"`
+	Description string `json:"description" db:"description" binding:"required"`
+}
