# app_sender/internal/entity/api/projects.go
@@ -1,0 +1,5 @@
+package api
+
+type ProjectsReq struct {
+	Name string `json:"name" db:"name" binding:"required"`
+}
